<resources>
    <string name="app_name">Handwashing reminder</string>
    <string name="activity_notification_channel_name">Activity
        notifications</string>
    <string name="activity_notification_channel_desc">Get a
        notification when you get out of a vehicle or finish an activity to
        remind you to wash your hands</string>
    <string name="time_notification_channel_name">Scheduled
        notifications</string>
    <string name="time_notification_channel_desc">Get a notification at
        scheduled times you have indicated in the application</string>
    <string name="activity_notification_walk">Did you have a good walk?
    &#128694;</string>
    <string name="activity_notification_walk_content">Walking 30 minutes a
        day is one of the greatest practices for having a good health &#128170;\n
        Remember to wash your hands before eating or touching your face
        &#129325; so you can have even better health &#128521;</string>
    <string name="activity_notification_run">Did you enjoy running?
        &#127939;&#8205;&#9792;&#65039;</string>
    <string name="activity_notifications_run_content">It\'s always
        funny to run &#128578; but usually it comes with a lot of sweat
    &#128517;.\nTry washing your hands as soon as possible or, even
        better, have a shower &#128704;</string>
    <string name="activity_notification_cycling">Having a good ride?
        &#128692;&#8205;&#9792;&#65039;</string>
    <string name="activity_notification_cycling_content">I always enjoy
    going cycling - it makes you feel free &#127794;.\nYour bike\'s handles were
    probably dirty so try to wash your hands as soon as you can
        &#128166;&#128079;</string>
    <string name="activity_notification_vehicle">Time to wash your
        hands &#128663;&#128649;</string>
    <string name="activity_notification_vehicle_content">In public
        transport there are lots of people and you don\'t know if they
        are ill or not &#128567;.\nEven in your own car there can be
        diseases in the handles or in the steering wheel &#128663;, so
        try to wash your hands as soon as you can for avoiding diseases
        &#128166;&#128079;
    </string>
    <string name="title_appintro" translatable="false">Handwashing reminder intro</string>
    <string name="privacy_policy_title">Privacy policy</string>
    <string name="tos_title">Terms and conditions</string>
    <string name="firebase_analytics_policy">Allow the application to
        collect and send anonymous data with data activity and
        analytics information</string>
    <string name="firebase_performance_policy">Allow the application to
        track its performance and send anonymous data for improving
        in-app experience</string>
    <string name="title_ads" translatable="false">Ads</string>
    <string name="ad_attribution">Ad</string>
    <string name="dynamic_module_loading_title">Building your app…</string>
    <string name="dynamic_module_loading_text">We are adding new
        content to the app so it works correctly. Please, wait a minute
    - this process should not last long.</string>
    <string name="dynamic_module_loading_error">Oops! Something went
        wrong 😥 - please retry the process | error code: %1$d</string>
    <string name="done">Done</string>
    <string name="preparing">Preparing…</string>
    <string name="installing">Installing…</string>
    <string name="diseases">Diseases</string>
    <string name="handwashing">Washing your hands</string>
    <string name="news">News</string>
    <string name="settings">Settings</string>
    <string name="breakfast_title">Breakfast time! &#9749;</string>
    <string-array name="breakfast_comments">
        <item>During sleep your hands get dirty, it\'s important to wash
            them before having breakfast &#128564;</item>
        <item>Washing your hands before breakfast will ensure you a good
            day &#128521;</item>
        <item>30 seconds for good health? Where do I sign! Just wash your
        hands &#128521;&#128166;&#128079;</item>
    </string-array>
    <string name="breakfast_notifications">Breakfast reminders</string>
    <string name="breakfast_description">Get a notification when it\'s breakfast
    time! &#9749;</string>
    <string name="lunch_title">Time to lunch and wash your hands!
        &#127857;</string>
    <string-array name="lunch_comments">
        <item>Having a good day? Let\'s continue with it having your hands
        clean &#128513;</item>
        <item>After a busy morning it\'s time to eat and do it clean
            &#128521;</item>
        <item>If you have gone to the street is even more important to
            wash your hands before having lunch &#128166;&#128079;</item>
    </string-array>
    <string name="lunch_notifications">Lunch reminders</string>
    <string name="lunch_description">Get a notification when it\'s lunch
    time! &#127857;</string>
    <string name="dinner_title">Let\'s have a clean dinner &#129367;</string>
    <string-array name="dinner_comments">
        <item>The day is finishing and you can do it fully by
            &#128166;&#128079;</item>
        <item>Remember before having dinner and going to sleep to wash
            your hands and count sheeps &#128017;</item>
        <item>Do you know that washing your hands can keep you safe from
            more than 15 diseases? That\'s a lot &#128558;</item>
    </string-array>
    <string name="dinner_notifications">Dinner reminders</string>
    <string name="dinner_description">Get a notification when it\'s dinner
    time! &#129367;</string>
    <string name="washing_hands_first_title">Let\'s learn how to wash
        our hands</string>
    <string name="washing_hands_first_description">Join me in this trip
    in which we will learn how to completely wash our hands
        &#128166;&#128079;.\nThis is very important not only for you but
    for everyone who is around you: from a baby &#128118; to your
        grandparents &#128116;&#128117;.\n\nIt\'s a small responsibility
        act that only lasts 30 seconds.

    Remember, it\'s not only for you but for them.</string>
    <string-array name="washing_hands_titles">
        <item>1. Rub your hands</item>
        <item>2. Clean in between your fingers</item>
        <item>3. Back-clean and in between the fingers</item>
        <item>4. Back-clean of the fingers</item>
        <item>5. Cleaning the thumbs</item>
        <item>6. Cleaning the tips and nails of your fingers</item>
        <item>7. Finish cleaning</item>
    </string-array>
    <string-array name="washing_hands_descriptions">
        <item>By wetting your hands and applying enough soap, rub your
            hands together for spreading the soap &#129532;.</item>
        <item>Now, using the spread soap, clean in between your fingers
            &#128400; (as shown in the video).</item>
        <item>By putting one hand on the back of the other one, clean it
            and in between the fingers &#129306;. Do the same with the other
            hand.</item>
        <item>As you can see, your fingers are not clean yet &#128064;, so
            put the back of your fingers against your palms and rub.</item>
        <item>We almost forget them &#128556;! Clean both your thumbs
            using the other hand &#128077;.</item>
        <item>Now it\'s time to clean both your tips and nails. Put them
            against your palm and clean them. Wow &#128561;! Such a
            beautiful nails! &#128133;</item>
        <item>Finally, clean the top of your hand (near your wrist).
            Then, rinse your hands in water and dry them with a
            disposable towel &#129531;. And finally, use it for turning off the
            tap. And it\'s done, you have finished! &#127882;&#127881;</item>
    </string-array>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="time_preferences_section">Scheduled time settings</string>
    <string name="breakfast_pref_title">Breakfast time &#9749;</string>
    <string name="breakfast_pref_summ">You set your breakfast time to: </string>
    <string name="lunch_pref_title">Lunch time &#127857;</string>
    <string name="lunch_pref_summ">You set your lunch time to: </string>
    <string name="dinner_pref_title">Dinner time &#129367;</string>
    <string name="dinner_pref_summ">You set your dinner time to: </string>
    <string name="activity_section">Activity notifications</string>
    <string-array name="activities">
        <item>After walking &#128694;</item>
        <item>After running &#127939;&#8205;&#9792;&#65039;</item>
        <item>After going cycling &#128692;</item>
        <item>After leaving a vehicle &#128649;</item>
    </string-array>
    <string-array name="activity_values" translatable="false">
        <item>7</item>
        <item>8</item>
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="empty_array" />
    <string name="google_api_not_found">You need to have Google Play
        Services installed and available for using this functionality</string>
    <string name="permission_permanently_denied">You denied permanently
    the access to your activity. Enable it from settings</string>
    <string name="activity_disabled">You will not receive any activity
        notifications</string>
    <string name="activity_enabled">You will receive notifications after having
        a walk, going cycling, leaving a vehicle or running</string>
    <string name="activity_recognition">Enable activity recognition</string>
    <string name="activities_to_enable">When you will receive
        notifications?</string>
    <string name="activities_info">You will receive notifications</string>
    <string name="activities_disabled">You will receive no
        notifications</string>
    <string name="data_sharing_category">Data sharing preferences</string>
    <string name="firebase_analytics" translatable="false">Firebase Analytics</string>
    <string name="firebase_performance" translatable="false">Firebase
        Performance</string>
    <string name="ads_explanation_title">Disable ads?</string>
    <string name="ads_explanation_desc">I know ads
        are sometimes disgusting and annoying and indeed they are not a great
        source of income so I\'m allowing you to turn them off
        &#128521;. This way I won\'t make any money, but you can make a
    donation whenever you want and supporting my development &#128519;</string>
    <string name="disable">Disable</string>
    <string name="ads_donations_category">Support the development</string>
    <string name="enable_ads">Enable ads</string>
    <string name="enable_ads_summ">Allow the app to show ads on diseases view and support development</string>
    <string name="donations">Contribute with a donation</string>
    <string name="donations_summ">Support the app development by making a donation</string>
    <string-array name="in_app_donations_names">
        <item>Donate 1€</item>
        <item>Donate 2€</item>
        <item>Donate 5€</item>
        <item>Donate 10€</item>
        <item>Donate 15€</item>
        <item>Donate 20€</item>
        <item>Donate 30€</item>
        <item>Donate 50€</item>
        <item>Donate 70€</item>
        <item>Donate 100€</item>
    </string-array>
    <string-array name="in_app_donations" translatable="false">
        <item>in_app_donations</item>
        <item>in_app_donations_2</item>
        <item>in_app_donations_5</item>
        <item>in_app_donations_10</item>
        <item>in_app_donations_15</item>
        <item>in_app_donations_20</item>
        <item>in_app_donations_30</item>
        <item>in_app_donations_50</item>
        <item>in_app_donations_70</item>
        <item>in_app_donations_100</item>
    </string-array>
</resources>