<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/diseases"
        android:enabled="true"
        android:icon="@drawable/ic_feedback_black"
        android:title="@string/diseases"
        android:visible="true" />
    <item
        android:id="@+id/handwashing"
        android:enabled="true"
        android:icon="@drawable/ic_handwashing_icon"
        android:title="@string/handwashing"
        android:visible="true" />
    <item
        android:id="@+id/news"
        android:enabled="true"
        android:icon="@drawable/ic_feedback_black"
        android:title="@string/news"
        android:visible="true" />
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/ic_feedback_black"
        android:title="@string/settings"
        android:visible="true" />
</menu>