<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/time_preferences_section"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true">

        <EditTextPreference
            android:id="@+id/breakfast"
            android:key="app:breakfast"
            android:selectAllOnFocus="true"
            android:singleLine="true" />

        <EditTextPreference
            android:id="@+id/lunch"
            android:key="app:lunch"
            android:selectAllOnFocus="true"
            android:singleLine="true" />

        <EditTextPreference
            android:id="@+id/dinner"
            android:key="app:dinner"
            android:selectAllOnFocus="true"
            android:singleLine="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/activity_section">

        <com.javinator9889.handwashingreminder.activities.views.fragments.settings.ActivityCheckbox
            android:id="@+id/activity_enabler"
            android:defaultValue="false"
            android:key="activity:gms:tracking"
            android:title="@string/activity_recognition"
            app:summary="For enabling the activity recognition, you need both Google Play Services and permissions"/>

        <com.javinator9889.handwashingreminder.activities.views.fragments.settings.ActivityMultiSelectList
            android:dependency="activity:gms:tracking"
            android:defaultValue="@array/empty_array"
            android:entries="@array/activities"
            android:entryValues="@array/activity_values"
            android:key="activity:gms:activities:enabled"
            android:title="@string/activities_to_enable" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Preference category">

        <SwitchPreference
            android:defaultValue="false"
            android:key="firebase:analytics"
            android:title="@string/firebase_analytics"
            android:summary="@string/firebase_analytics_policy"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="firebase:analytics"
            android:title="@string/firebase_performance"
            android:summary="@string/firebase_performance_policy"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="Preference category">

        <SwitchPreference
            android:defaultValue="false"
            android:key="app:ads:enabled"
            android:title="Enable ads"
            android:summary="Allow the app to show ads on diseases view and support development"/>

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/activities"
            android:entryValues="@array/activities"
            android:key="list_preference_1"
            android:title="Make a donation"
            android:summary="Support the app development by making a donation"/>
    </PreferenceCategory>
</PreferenceScreen>